--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-
+    parameters {
+        string(name: 'UCDVersionDescription', description: 'Please add a description')
+    }
     stages {
         stage('Tom Test') {
             steps {
