--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,8 +12,10 @@ pipeline {
         stage('Create JSON') {
             steps {
                 script {
-                    def jsonString = "{"ucdDescription":"${params.ucdVersionDescription}"}"
+                    def valueFromBuild = "${params.ucdVersionDescription}"
+                    def jsonString = '{"ucdDescription": valueFromBuild }'
                     def jsonObj = readJSON text: jsonString
+                    assert props.ucdDescription == 'valueFromBuild'
                 }
             }
         }
