--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
             steps {
                 script {
                     def valueFromBuild = "${params.ucdVersionDescription}"
-                    def jsonString = '{"ucdDescription": valueFromBuild }'
+                    def jsonString = '{"ucdDescription": "valueFromBuild" }'
                     def jsonObj = readJSON text: jsonString
                     assert props.ucdDescription == 'valueFromBuild'
                 }
