--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,5 +19,12 @@ pipeline {
                 }
             }
         }
+        stage('Push data.json to github') {
+            script {
+                sh "git add data.json"
+                sh "git commit -m 'Adding data.json to master for use later'"
+                git push "https://github.com/TomClark96/jenkins-testing"
+            }
+        }
     }
 }
